--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 rootProject.name = 'The Movie DB'
 include ':app', ':core', ':core:network', ':core:preferences'
 include ':features:login', ':features:movies', ':features:user'
+include ':test'
