--- a/buildsystem/instrumentation-test-android.gradle
+++ b/buildsystem/instrumentation-test-android.gradle
@@ -1,8 +1,6 @@
+apply from: rootProject.file('buildsystem/dependencies.gradle')
+
 android {
-    defaultConfig {
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        testInstrumentationRunnerArgument "runnerBuilder", "de.mannodermaus.junit5.AndroidJUnit5Builder"
-    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -12,4 +10,15 @@ android {
     packagingOptions {
         exclude "META-INF/LICENSE*"
     }
+}
+
+dependencies {
+
+    androidTestImplementation(
+            deps.test.runner,
+            deps.jupiter.api,
+            deps.junit5.core
+    )
+
+    androidTestRuntimeOnly(deps.junit5.runner)
 }
