--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,3 +1,10 @@
 apply from: rootProject.file('buildsystem/android-library.gradle')
 apply from: rootProject.file('buildsystem/test-android.gradle')
 apply from: rootProject.file('buildsystem/instrumentation-test-android.gradle')
+
+dependencies {
+    implementation project(":core")
+
+    implementation(deps.rxJava.rx2)
+
+}
