--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -7,6 +7,7 @@ versions.appcompat = "1.1.0"
 versions.material = "1.2.0-alpha05"
 versions.recyclerview = "1.1.0"
 versions.fragment = "1.3.0-alpha01"
+versions.activity = "1.2.0-alpha02"
 versions.cardview = "1.0.0"
 versions.constraint = "2.0.0-beta4"
 versions.lifecycle = "2.2.0"
@@ -36,11 +37,9 @@ versions.spek = "2.0.10"
 
 def android = [:]
 android.appcompat = "androidx.appcompat:appcompat:$versions.appcompat"
+android.activity = "androidx.activity:activity-ktx:$versions.fragment"
 android.fragment = "androidx.fragment:fragment-ktx:$versions.fragment"
-android.recyclerview = "androidx.appcompat:appcompat:$versions.appcompat"
-android.cardview = "androidx.appcompat:appcompat:$versions.appcompat"
 android.constraint = "androidx.constraintlayout:constraintlayout:$versions.constraint"
-android.preference = "androidx.appcompat:appcompat:$versions.appcompat"
 android.security = "androidx.security:security-crypto:$versions.security"
 android.ktx = "androidx.core:core-ktx:$versions.ktx"
 deps.android = android
