--- a/features/login/build.gradle
+++ b/features/login/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation(
             deps.kotlin.stdlib,
             deps.android.appcompat,
+            deps.android.fragment,
             deps.android.constraint,
             deps.android.ktx,
             deps.material.material,
