--- a/features/movies/build.gradle
+++ b/features/movies/build.gradle
@@ -8,6 +8,7 @@ dependencies {
             deps.kotlin.stdlib,
             deps.android.appcompat,
             deps.android.constraint,
+            deps.android.fragment,
             deps.android.ktx,
             deps.material.material,
             deps.rxJava.rx2,
