--- a/features/user/build.gradle
+++ b/features/user/build.gradle
@@ -9,6 +9,7 @@ dependencies {
             deps.kotlin.stdlib,
             deps.android.appcompat,
             deps.android.constraint,
+            deps.android.fragment,
             deps.android.ktx,
             deps.material.material,
             deps.rxJava.rx2,
