--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation(
             deps.kotlin.stdlib,
             deps.android.appcompat,
+            deps.android.fragment,
             deps.android.ktx,
             deps.material.material,
             deps.navigation.fragment,
