--- a/features/movies/build.gradle
+++ b/features/movies/build.gradle
@@ -7,10 +7,12 @@ dependencies {
     implementation(
             deps.kotlin.stdlib,
             deps.android.appcompat,
-            deps.android.constraint,
-            deps.android.fragment,
             deps.android.ktx,
+            deps.android.fragment,
+            deps.android.constraint,
             deps.material.material,
+            deps.navigation.fragment,
+            deps.navigation.ui,
             deps.rxJava.rx2,
             deps.rxJava.rxAndroid,
             deps.network.retrofit2,
