--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.6.0.0"
         classpath "gradle.plugin.dev.arunkumar:scabbard-gradle-plugin:0.2.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-alpha04"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
