--- a/buildsystem/android-base.gradle
+++ b/buildsystem/android-base.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 apply from: rootProject.file('buildsystem/versions.gradle')
 apply from: rootProject.file('buildsystem/dependencies.gradle')
