--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -31,6 +31,7 @@ dependencies {
             deps.network.retrofit2,
             deps.network.logging,
             deps.network.moshi,
+            deps.network.moshireflection,
             deps.network.moshiconverter,
             deps.network.rxconverter,
             deps.rxJava.rx2,
