--- a/features/movies/build.gradle
+++ b/features/movies/build.gradle
@@ -20,6 +20,7 @@ dependencies {
             deps.network.retrofit2,
             deps.network.moshi,
             deps.glide.glide,
+            deps.glide.transformations,
             deps.tools.timber,
             deps.dagger.dagger
     )
