--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="m">
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:targetApi="n">
 
         <activity
             android:name="com.lockwood.themoviedb.presentation.ui.MainActivity"
