--- a/features/login/build.gradle
+++ b/features/login/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation project(":core")
     implementation project(":core:network")
     implementation project(":core:preferences")
+    implementation project(":features:pin")
     implementation project(":test")
 
     implementation(
