--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,6 +8,7 @@ dependencies {
             deps.android.appcompat,
             deps.android.fragment,
             deps.android.ktx,
+            deps.android.rootbeer,
             deps.material.material,
             deps.navigation.fragment,
             deps.navigation.ui,
