--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,6 +9,7 @@ dependencies {
             deps.android.fragment,
             deps.android.ktx,
             deps.android.rootbeer,
+            deps.android.tink,
             deps.material.material,
             deps.navigation.fragment,
             deps.navigation.ui,
