--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -84,8 +84,9 @@ deps.network = network
 
 def room = [:]
 room.runtime = "androidx.room:room-runtime:$versions.room"
-room.compiler = "androidx.room:room-compiler:$versions.room"
+room.ktx = "androidx.room:room-ktx:$versions.room"
 room.rx2 = "androidx.room:room-rxjava2:$versions.room"
+room.compiler = "androidx.room:room-compiler:$versions.room"
 room.testing = "androidx.room:room-testing:$versions.room"
 deps.room = room
 
